| Summary: | ASTERISK-29124: res_pjsip: flow transport broken for outbound requests | ||
| Reporter: | Nick French (naf) | Labels: | |
| Date Opened: | 2020-10-13 11:43:04 | Date Closed: | 2020-10-28 07:57:00 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Commit 44bb0858cb3ea6a8db8b8d1c7fedcfec341ddf66 ("debugging: Add enough to choke a mule") accidentally removed calls to ast_sip_message_apply_transport when it was attempting to just add debugging code.
The kiss of death was saying that there were no functional changes in the commit comment ;-) This makes outbound calls that use the 'flow' transport mechanism fail, since this call is used to relay headers into the outbound INVITE requests. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-10-13 11:43:05.428-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2020-10-28 07:57:01.674-0500 Change 15063 merged by Friendly Automation: res_pjsip_session: Restore calls to ast_sip_message_apply_transport() [https://gerrit.asterisk.org/c/asterisk/+/15063|https://gerrit.asterisk.org/c/asterisk/+/15063] By: Friendly Automation (friendly-automation) 2020-10-28 07:57:45.453-0500 Change 15056 merged by Friendly Automation: res_pjsip_session: Restore calls to ast_sip_message_apply_transport() [https://gerrit.asterisk.org/c/asterisk/+/15056|https://gerrit.asterisk.org/c/asterisk/+/15056] By: Friendly Automation (friendly-automation) 2020-10-28 08:39:13.207-0500 Change 15057 merged by George Joseph: res_pjsip_session: Restore calls to ast_sip_message_apply_transport() [https://gerrit.asterisk.org/c/asterisk/+/15057|https://gerrit.asterisk.org/c/asterisk/+/15057] | ||